--- a/src/components/RouteAbout/index.scss
+++ b/src/components/RouteAbout/index.scss
@@ -126,7 +126,7 @@
 // ============================================
 // Section Spacing Wrapper
 // ============================================
-.section-spcaing-wrapper {
+.section-spacing-wrapper {
   padding-top: var(--enj-spacing-gap);
   padding-bottom: var(--enj-spacing-gap);
 }
